fix: remove deprecated method